# MLDS-HA

./: .env.example  .gitignore  AGENTIC_SEMANTIC_NLP_PLAN.md  GEOGRAPHIC_ANALYTICS_INTEGRATION.md  LANGUAGE_METRICS_INTEGRATION.md  README.md  SEMANTIC_SEARCH_ENHANCEMENTS.md  UNUSED_DATA_ANALYSIS.md  pyproject.toml
config/: global.yaml  global_config.py
cross_platform/: __init__.py  agentic_suite.py  cross_platform_agent.py  cross_platform_metrics_export.py  semantic_api_server.py  semantic_eval.py  semantic_pipeline.py  semantic_search_engine.py  sentiment_analyzer.py  sentiment_backfill.py
customer_care/: customer_care_agent.py
dashboard/: facebook_bundle.py  facebook_index.html  index.html  instagram_bundle.py  instagram_index.html  portal_bundle.py  portal_index.html  tiktok_bundle.py  tiktok_index.html
data/: instagram_sample_data.xlsx
docs/: facebook_ingestion_example.md  hardcoded_values_audit.md  implementation_changes_required.md  phased_ingestion_implementation.md
facebook/: facebook_agent.py  facebook_entities.py  facebook_ingest.py  facebook_metrics_export.py  facebook_schema.py
ingestion/: batch_processor.py  entity_resolver.py  scheduler.py  unified_entities.py  unified_ingest.py  unified_schema.py
instagram/: instagram_agent.py  instagram_entities.py  instagram_ingest.py  instagram_metrics_export.py  instagram_schema.py
metrics/: metrics_analyzers.py  metrics_config.py  timezone_mapping.py  unified_metrics_export.py  unified_metrics_export_BACKUP.py  unified_metrics_export_new.py
monitoring/: quality_dashboard.py
rag/: indexer.py
(+16 files in other folders)
